--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.4.4"
+    "react-scripts": "3.4.4",
+    "axios": "^0.18.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,5 +47,6 @@
       "<rootDir>/node_modules/",
       "<rootDir>/.git/"
     ]
-  }
+  },
+  "proxy": "http://localhost:8001"
 }
