--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/react-hooks": "^1.0.4",
     "axios": "^0.18.1",
     "classnames": "^2.2.6",
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-hooks-testing-library": "^0.6.0",
-    "react-scripts": "3.4.4"
+    "react-scripts": "3.4.4",
+    "react-test-renderer": "^16.9.0-alpha.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,7 +20,6 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public --ci",
     "build-storybook": "build-storybook -s public",
-    "eslint": "./node_modules/.bin/eslint",
     "cypress": "cypress open -P ."
   },
   "browserslist": {
@@ -43,8 +44,6 @@
     "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^8.0.7",
     "babel-loader": "^8.0.5",
-    "eslint": "^8.27.0",
-    "eslint-plugin-react": "^7.31.10",
     "prop-types": "^15.8.1",
     "sass": "^1.53.0"
   },
